# CUDA-Fishes

./: .gitignore  CMakeLists.txt  README.md  instruction.txt
CUDA-Fishes/: CMakeLists.txt  CUDA-Fishes.cpp  CUDA-Fishes.h
include/: helpers.cu  helpers.cuh
includes/: helpers.cu  helpers.cuh
main_loop/: main_loop_cpu.cu  main_loop_cpu.cuh  main_loop_gpu.cu  main_loop_gpu.cuh
objects/: fishes.cu  fishes.cuh  grid.cu  grid.cuh  options.cuh
src/: CMakeLists.txt  main.cu
